# Spotify-Local-For-OBS--Widget-

./: .gitignore  LICENSE  README.md
OBS-PLUGIN/: .gitignore  CMakeLists.txt  COMO_DISTRIBUIR.md  INSTALACION-PARA-PRINCIPIANTES.md  INSTALAR.md  Instalar.bat  Instalar.exe.bat  LEEME-IMPORTANTE.md  LICENSE  PARA_TUS_AMIGOS.md  README.md  RESUMEN.md  build-all.ps1  build.bat  build.sh  build_installer.ps1  crear-acceso-directo.ps1  generar_instalador.bat  install.bat  install.ps1  installer-gui.ps1  installer-windows.ps1  launcher.cs  launcher.vbs
OBS-PLUGIN/cmake/: FindLibObs.cmake
OBS-PLUGIN/data/icons/: README.md
OBS-PLUGIN/data/locale/: en-US.ini
OBS-PLUGIN/data/overlay/: index.html  script.js  style.css
OBS-PLUGIN/data/overlay/fonts/: README.md
OBS-PLUGIN/src/: audio-capture.c  audio-capture.h  http-server.c  http-server.h  media-monitor.c  media-monitor.h  native-overlay.c  overlay_content.h  plugin-main.c  spotify-source.c  spotify-source.h
OBS-PLUGIN/src/platform/linux/: mpris-monitor.c  mpris-monitor.h  pulse-capture.c  pulse-capture.h
OBS-PLUGIN/src/platform/macos/: coreaudio-capture.c  mrmonitor.c
OBS-PLUGIN/src/platform/windows/: smtc-monitor.c  wasapi-capture.c
OBS-PLUGIN/src/utils/: base64.c  base64.h
OBS-PLUGIN/winforms-installer/: MainForm.cs  Program.cs  SpotifyOverlayInstaller.csproj  app.manifest
server-package/: launcher-single.cs  launcher.cs  package-lock.json  package.json  server.js
